# airflow-provider-kafka

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.angreal/: task_demo.py  task_release.py  task_setup.py  task_tests.py
.circleci/: config.yml
.github/workflows/: release.yaml  test.yaml
airflow_provider_kafka/: __init__.py  shared_utils.py
airflow_provider_kafka/hooks/: admin_client.py  consumer.py  producer.py
airflow_provider_kafka/operators/: await_message.py  consume_from_topic.py  event_triggers_dag.py  event_triggers_function.py  produce_to_topic.py
airflow_provider_kafka/triggers/: await_message.py
dev/: .dockerignore  Dockerfile  docker-compose.yaml
dev/logs/scheduler/: latest
example_dags/: hello_kafka.py  hello_world.py  hello_world_dag.py  listener_dag.py  listener_dag_function.py
kafka_provider/: __init__.py  shared_utils.py
kafka_provider/example_dags/: sample-dag.py
kafka_provider/hooks/: admin_client.py  consumer.py  producer.py
kafka_provider/operators/: await_message.py  consume_from_topic.py  consume_topic.py  produce_to_topic.py  produce_topic.py
kafka_provider/triggers/: await_message.py
tests/integration/: cluster_fixture.py  conftest.py  testconf.json
tests/scripts/: docker-compose.yaml  fafo.py
tests/unit/: test_shared_utils.py
tests/unit/hooks/: test_admin_client.py  test_consumer.py  test_producer.py
tests/unit/operators/: test_consume_from_topic.py  test_consume_topic.py  test_produce_to_topic.py
tests/unit/triggers/: test_await_message.py
