
[metadata]
name = 
version = attr: kafka_provider.__version__
url = 
author = Dylan Storey
author_email = dylan.storey@astronomer.io
description = Airflow provider package for Kafka.
long_description = file: README.md

[options]
python_requires => 3.7
packages = find:
include_package_data = true
install_requres = 
    confluent-kafka>=1.8.2
    asgiref
zip_safe = false

[options.extras_requires]
dev = 
    trivup
    mypy>=0.800
    pytest
    pre-commit

[options.packages.find]
include = 
    kafka_provider*

[tool:pytest]
testpaths = test
addopts=--tb=short

[flake8]
exclude = venv/*,tox/*,specs/*
ignore = E123,E128,E266,E402,W503,E731,W601
max-line-length = 119

[isort]
profile = black
multi_line_output = 3

[mypy]
warn_unused_ignores = True
namespace_packages = True
install_types = True

[mypy-airflow.*]
ignore_missing_imports = True

[mypy-asgiref.*]
ignore_missing_imports = True


from setuptools import find_packages, setup

with open("README.md", "r") as fh:
    long_description = fh.read()

"""Perform the package airflow-provider-sample setup."""
setup(
    name='airflow-provider-kafka',
    version="0.0.1",
    description='A provider for ',
    long_description=long_description,
    long_description_content_type='text/markdown',
    entry_points={
        "apache_airflow_provider": [
            "provider_info=sample_provider.__init__:get_provider_info"
        ]
    },
    license='Apache License 2.0',
    packages=['sample_provider', 'sample_provider.hooks',
              'sample_provider.sensors', 'sample_provider.operators'],
    install_requires=['apache-airflow>=2.0','confluent-kafka==1.8.2'],
    setup_requires=['setuptools', 'wheel'],
    author='Pete DeJoy',
    author_email='pete@astronomer.io',
    url='http://astronomer.io/',
    python_requires='~=3.7',
)
