
[metadata]
name =
version = attr: kafka_provider.__version__
url =
author = Dylan Storey
author_email = dylan.storey@astronomer.io
description = Airflow provider package for Kafka.
long_description = file: README.md

[options]
python_requires => 3.7
packages = find:
include_package_data = true
install_requres =
    confluent-kafka>=1.8.2
    asgiref
zip_safe = false

[options.extras_require]
tests =
    trivup
    mypy>=0.800
    pytest
    pre-commit

[options.packages.find]
include =
    kafka_provider*

[tool:pytest]
testpaths = tests
addopts=--tb=short

[flake8]
exclude = venv/*,tox/*,specs/*
ignore = E123,E128,E266,E402,W503,E731,W601
max-line-length = 119

[isort]
profile = black
multi_line_output = 3

[mypy]
warn_unused_ignores = True
namespace_packages = True
install_types = True

[mypy-airflow.*]
ignore_missing_imports = True

[mypy-asgiref.*]
ignore_missing_imports = True
